// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TemplateRenderer > renders action-group 1`] = `
"<?xml version="1.0" encoding="utf-8" standalone="yes"?>
<?xml-model href="https://raw.githubusercontent.com/reaby/manialink-xsd/main/manialink_v3.xsd" ?>
<manialink name="GCP:test-id" id="test-id" version="3">
<frame id="widget" pos="1 2" z-index="10" hidden="1">
<frame pos="0 0" size="10 5" z-index="10">
  <frame size="10 5" pos="-5 0">
    <frame pos="5 0" size="5 5">
      <quad size="5 5" bgcolor="222" />
      <label pos="2.6 -2.15" text="" halign="center" valign="center" textsize="2.5" textcolor="DDD" />
    </frame>

      <frame pos="0 0" size="5 5">
        <quad size="5 5" bgcolor="DDD" action="act" />
          <quad image="x" size="3.5 3.5" pos="0.75 -0.75" />
      </frame>

    <quad class="trigger" pos="5 0" z-index="2" size="5 5" bgcolor="222" opacity="0" scriptevents="1" />
  </frame>
</frame>

</frame>

<script><!--
#Include "MathLib" as ML
#Include "TextLib" as TL
#Include "TimeLib" as TimeLib
#Include "ColorLib" as CL



declare CMlFrame widget;
--></script>

<script><!--
declare Vec2 widgetBasePosition;
declare CMlFrame HS_Target;
declare Boolean HS_Hidden;

Void hs_hide(Integer duration) {
  HS_Hidden = True;
  declare Real x;
  if (widgetBasePosition[0] < 0.0) {
    x = (HS_Target.Size[0] * -HS_Target.RelativeScale) - 322.0;
  } else {
    x = 322.0;
  }
  AnimMgr.Add(HS_Target, "<frame pos='" ^ x ^ " " ^ widgetBasePosition[1] ^ "' />", duration, CAnimManager::EAnimManagerEasing::ExpInOut);
}

Void hs_show(Integer duration) {
  HS_Hidden = False;
  AnimMgr.Add(HS_Target, "<frame pos='" ^ widgetBasePosition[0] ^ " " ^ widgetBasePosition[1] ^ "' />", duration, CAnimManager::EAnimManagerEasing::CircOut);
}

Void hidescript() {
  if (HS_Target == Null){
    HS_Target <=> (Page.MainFrame.GetFirstChild("widget") as CMlFrame);
  }

  declare hideSpeed = 10;

  if (InputPlayer == Null) {
    if (HS_Hidden) {
      hs_show(600);
    }
    return;
  }

  declare Boolean overHidespeed = ML::Abs(InputPlayer.Speed * 3.6) > hideSpeed;

  if (overHidespeed && !HS_Hidden) {
    hs_hide(1000);

    while(InputPlayer.Speed * 3.6 > hideSpeed){
      yield;
      hidescript();
    }
  }
  
  if (!overHidespeed && HS_Hidden) {
    sleep(1000);
    hs_show(600);
  }
}
--></script>
<script><!--

--></script>

<script><!--
main() {
  widget <=> (Page.MainFrame.GetFirstChild("widget") as CMlFrame);
  widgetBasePosition = widget.AbsolutePosition_V3;

  sleep(300);
  widget.Show();

  

  while (True) {
    yield;

    foreach(event in PendingEvents){
      if(event.Control == Null) continue;

      if (event.Control.HasClass("trigger") && event.Type == CMlScriptEvent::Type::MouseClick) {
  declare Boolean actionGroupIsOpen for This;

  if (actionGroupIsOpen) {
    AnimMgr.Add(event.Control.Parent, """<frame pos='-5 0' />""", 200, CAnimManager::EAnimManagerEasing::ExpInOut);
    declare triggerIcon <=> ((event.Control.Parent.Controls[0] as CMlFrame).Controls[1] as CMlLabel);
    AnimMgr.Add(triggerIcon, """<label rot='0' pos='2.6 -2.15' />""", 200, CAnimManager::EAnimManagerEasing::ExpInOut);
  } else {
    AnimMgr.Add(event.Control.Parent, """<frame pos='0 0' />""", 200, CAnimManager::EAnimManagerEasing::ExpInOut);
    declare triggerIcon <=> ((event.Control.Parent.Controls[0] as CMlFrame).Controls[1] as CMlLabel);
    AnimMgr.Add(triggerIcon, """<label rot='180' pos='2.25 -2.9' />""", 200, CAnimManager::EAnimManagerEasing::ExpInOut);
  }

  actionGroupIsOpen = !actionGroupIsOpen;
}

    }

    

      hidescript();
  }
}

--></script>

</manialink>
"
`;

exports[`TemplateRenderer > renders manialink 1`] = `
"<?xml version="1.0" encoding="utf-8" standalone="yes"?>
<?xml-model href="https://raw.githubusercontent.com/reaby/manialink-xsd/main/manialink_v3.xsd" ?>
<manialink name="GCP:test-id" id="test-id" version="3">

</manialink>
"
`;

exports[`TemplateRenderer > renders scripts/hide 1`] = `
"<script><!--
declare Vec2 widgetBasePosition;
declare CMlFrame HS_Target;
declare Boolean HS_Hidden;

Void hs_hide(Integer duration) {
  HS_Hidden = True;
  declare Real x;
  if (widgetBasePosition[0] < 0.0) {
    x = (HS_Target.Size[0] * -HS_Target.RelativeScale) - 322.0;
  } else {
    x = 322.0;
  }
  AnimMgr.Add(HS_Target, "<frame pos='" ^ x ^ " " ^ widgetBasePosition[1] ^ "' />", duration, CAnimManager::EAnimManagerEasing::ExpInOut);
}

Void hs_show(Integer duration) {
  HS_Hidden = False;
  AnimMgr.Add(HS_Target, "<frame pos='" ^ widgetBasePosition[0] ^ " " ^ widgetBasePosition[1] ^ "' />", duration, CAnimManager::EAnimManagerEasing::CircOut);
}

Void hidescript() {
  if (HS_Target == Null){
    HS_Target <=> (Page.MainFrame.GetFirstChild("") as CMlFrame);
  }

  declare hideSpeed = 10;

  if (InputPlayer == Null) {
    if (HS_Hidden) {
      hs_show(600);
    }
    return;
  }

  declare Boolean overHidespeed = ML::Abs(InputPlayer.Speed * 3.6) > hideSpeed;

  if (overHidespeed && !HS_Hidden) {
    hs_hide(1000);

    while(InputPlayer.Speed * 3.6 > hideSpeed){
      yield;
      hidescript();
    }
  }
  
  if (!overHidespeed && HS_Hidden) {
    sleep(1000);
    hs_show(600);
  }
}
--></script>"
`;

exports[`TemplateRenderer > renders widget 1`] = `
"<?xml version="1.0" encoding="utf-8" standalone="yes"?>
<?xml-model href="https://raw.githubusercontent.com/reaby/manialink-xsd/main/manialink_v3.xsd" ?>
<manialink name="GCP:test-id" id="test-id" version="3">
<frame id="widget" pos="1 2" z-index="10" hidden="1">

</frame>

<script><!--
#Include "MathLib" as ML
#Include "TextLib" as TL
#Include "TimeLib" as TimeLib
#Include "ColorLib" as CL



declare CMlFrame widget;
--></script>

<script><!--
declare Vec2 widgetBasePosition;
declare CMlFrame HS_Target;
declare Boolean HS_Hidden;

Void hs_hide(Integer duration) {
  HS_Hidden = True;
  declare Real x;
  if (widgetBasePosition[0] < 0.0) {
    x = (HS_Target.Size[0] * -HS_Target.RelativeScale) - 322.0;
  } else {
    x = 322.0;
  }
  AnimMgr.Add(HS_Target, "<frame pos='" ^ x ^ " " ^ widgetBasePosition[1] ^ "' />", duration, CAnimManager::EAnimManagerEasing::ExpInOut);
}

Void hs_show(Integer duration) {
  HS_Hidden = False;
  AnimMgr.Add(HS_Target, "<frame pos='" ^ widgetBasePosition[0] ^ " " ^ widgetBasePosition[1] ^ "' />", duration, CAnimManager::EAnimManagerEasing::CircOut);
}

Void hidescript() {
  if (HS_Target == Null){
    HS_Target <=> (Page.MainFrame.GetFirstChild("widget") as CMlFrame);
  }

  declare hideSpeed = 10;

  if (InputPlayer == Null) {
    if (HS_Hidden) {
      hs_show(600);
    }
    return;
  }

  declare Boolean overHidespeed = ML::Abs(InputPlayer.Speed * 3.6) > hideSpeed;

  if (overHidespeed && !HS_Hidden) {
    hs_hide(1000);

    while(InputPlayer.Speed * 3.6 > hideSpeed){
      yield;
      hidescript();
    }
  }
  
  if (!overHidespeed && HS_Hidden) {
    sleep(1000);
    hs_show(600);
  }
}
--></script>
<script><!--

--></script>

<script><!--
main() {
  widget <=> (Page.MainFrame.GetFirstChild("widget") as CMlFrame);
  widgetBasePosition = widget.AbsolutePosition_V3;

  sleep(300);
  widget.Show();

  

  while (True) {
    yield;

    foreach(event in PendingEvents){
      if(event.Control == Null) continue;

      
    }

    

      hidescript();
  }
}

--></script>

</manialink>
"
`;

exports[`TemplateRenderer > renders window 1`] = `
"<?xml version="1.0" encoding="utf-8" standalone="yes"?>
<?xml-model href="https://raw.githubusercontent.com/reaby/manialink-xsd/main/manialink_v3.xsd" ?>
<manialink name="GCP:test-id" id="test-id" version="3">
<frame id="window" pos="-25 20" size="50 45" z-index="20">
  <quad pos="0 0" size="50 5" bgcolor="222" />
  <label pos="1.5 -2.25" text="Title" size="40.5 5" valign="center" halign="left" textsize="1" color="DDD" textfont="GameFontSemiBold" />
  <label pos="48.5 -2.25" text="" size="5 5" valign="center" halign="right" textsize="1" color="222" action="close-window-test-id" focusareacolor2="DDD0" />

  <quad pos="0 -5" size="50 40" bgcolor="DDD" />
  <frame pos="0 -5" size="50 40">
    
  </frame>
</frame>

<script><!--
#Include "MathLib" as ML
#Include "TextLib" as TL
#Include "TimeLib" as TimeLib
#Include "ColorLib" as CL





main() {
  

  while (True) {
    yield;

    foreach(event in PendingEvents){
      if(event.Control == Null) continue;

      
    }

    
  }
}
--></script>

</manialink>
"
`;
